// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixInstructionProcessor background and foreground on the message (mind the order) 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 2.52 (background color: #8a94a8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    , foreground color: #e7ecd8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#e7ecd8",
      }
    }
  />
  <span>
    , font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor background color on the message 1`] = `
<React.Fragment>
  <span>
    color contrast of 2.52 (background color: #8a94a8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    ; nothing else to match here)
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground and background color on the message (mind the order) 1`] = `
<React.Fragment>
  <span>
    Element has insufficient color contrast of 2.52 (foreground color: #8a94a8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    , background color: #e7ecd8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#e7ecd8",
      }
    }
  />
  <span>
    , font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground color on the message 1`] = `
<React.Fragment>
  <span>
    color contrast of 2.52 (foreground color: #8a94a8
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#8a94a8",
      }
    }
  />
  <span>
    ; nothing else to match here)
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor no background nor foreground on the message 1`] = `
<React.Fragment>
  there is nothing that will trigger the processor to change the fix instruction here
</React.Fragment>
`;

exports[`FixInstructionProcessor we assume only one instance of fore/background color, second instance will be ignored 1`] = `
<React.Fragment>
  <span>
    first foreground color: #ffffff
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <span>
    , second foreground: #000000, first background color: #AAAAAA
  </span>
  <span
    className="fix-instruction-color-box"
    style={
      Object {
        "backgroundColor": "#AAAAAA",
      }
    }
  />
  <span>
    , second background color: #bbBBbb
  </span>
</React.Fragment>
`;
